--- a/front/public/index.html
+++ b/front/public/index.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="bundle.js"></script>
+    <script type="module"></script>
   </body>
 </html>
