--- a/front/public/index.html
+++ b/front/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>햄버거 만들기</title>
+    <title>MadDonald</title>
   </head>
   <body>
     <div id="root"></div>
